[gd_scene load_steps=18 format=2]

[ext_resource path="res://Menu/Graphics/theme/defaultTheme.tres" type="Theme" id=1]
[ext_resource path="res://Menu/Graphics/Background/BackgroundPlaceholder.png" type="Texture" id=2]
[ext_resource path="res://Menu/MainMenu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Menu/GlitchEffect/Logo.tscn" type="PackedScene" id=4]
[ext_resource path="res://Menu/GlitchEffect/Glitch.tscn" type="PackedScene" id=5]
[ext_resource path="res://Menu/Graphics/theme/font/FontDerelictRoughBig.tres" type="DynamicFont" id=6]
[ext_resource path="res://Menu/Graphics/theme/MasterTheme.tres" type="Theme" id=7]
[ext_resource path="res://Menu/Graphics/Button/ButtonPressedGreen.png" type="Texture" id=8]
[ext_resource path="res://Menu/Graphics/Button/ButtonNormalGreen.png" type="Texture" id=9]
[ext_resource path="res://Menu/Graphics/Button/ButtonPressedRed.png" type="Texture" id=10]
[ext_resource path="res://Menu/Graphics/Button/ButtonNormalRed.png" type="Texture" id=11]
[ext_resource path="res://Debug/InputDeviceInfo.tscn" type="PackedScene" id=12]
[ext_resource path="res://Menu/Tutorial/TutorialPopUp.tscn" type="PackedScene" id=13]

[sub_resource type="StyleBoxTexture" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 340, 80 )
margin_left = 20.0
margin_right = 87.0
margin_top = 20.0
margin_bottom = 20.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true
_sections_unfolded = [ "Margin" ]

[sub_resource type="StyleBoxTexture" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 340, 80 )
margin_left = 20.0
margin_right = 87.0
margin_top = 20.0
margin_bottom = 20.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true
_sections_unfolded = [ "Margin" ]

[sub_resource type="StyleBoxTexture" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 340, 80 )
margin_left = 20.0
margin_right = 87.0
margin_top = 20.0
margin_bottom = 20.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true
_sections_unfolded = [ "Margin" ]

[sub_resource type="StyleBoxTexture" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 340, 80 )
margin_left = 20.0
margin_right = 87.0
margin_top = 20.0
margin_bottom = 20.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true
_sections_unfolded = [ "Margin" ]

[node name="MainMenu" type="TextureRect"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
script = ExtResource( 3 )
mapSelection = "res://Menu/MapSelect/MapSelect.tscn"
option = "res://Menu/Options/Options.tscn"
credits = "res://Menu/Credits/Credits.tscn"
leaderboard = "res://Menu/LeaderBoard/Leaderboard.tscn"

[node name="Logo" parent="." index="0" instance=ExtResource( 4 )]

[node name="Glitch" parent="." index="1" instance=ExtResource( 5 )]

margin_left = -9.0
margin_top = -5.0
margin_right = 11.0
margin_bottom = 10.0

[node name="Header" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 50.0
margin_right = 421.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = ExtResource( 6 )
text = "MainMenu"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect", "Theme", "custom_fonts" ]

[node name="MapSelectBtn" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 250.0
margin_right = 374.0
margin_bottom = 318.0
rect_min_size = Vector2( 324, 90 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_top = NodePath("../ExitBtn")
focus_neighbour_bottom = NodePath("../SubContent/HowToBtn")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 7 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Map Select"
flat = false
align = 0
_sections_unfolded = [ "Focus", "custom_styles" ]

[node name="SubContent" type="VBoxContainer" parent="." index="4"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
margin_left = 50.0
margin_top = -140.0
margin_right = 374.0
margin_bottom = 265.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 20
alignment = 1
_sections_unfolded = [ "Anchor", "Margin", "Mouse", "Rect", "Size Flags", "custom_constants" ]

[node name="HowToBtn" type="Button" parent="SubContent" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 324.0
margin_bottom = 90.0
rect_min_size = Vector2( 324, 90 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_top = NodePath("../../MapSelectBtn")
focus_neighbour_bottom = NodePath("../OptionsBtn")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "How To Play"
flat = false
align = 0
_sections_unfolded = [ "Focus", "Rect" ]

[node name="OptionsBtn" type="Button" parent="SubContent" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 110.0
margin_right = 324.0
margin_bottom = 200.0
rect_min_size = Vector2( 324, 90 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_top = NodePath("../HowToBtn")
focus_neighbour_bottom = NodePath("../LeaderboardBtn")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Options"
flat = false
align = 0
_sections_unfolded = [ "Focus" ]

[node name="LeaderboardBtn" type="Button" parent="SubContent" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 220.0
margin_right = 324.0
margin_bottom = 310.0
rect_min_size = Vector2( 324, 90 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_top = NodePath("../OptionsBtn")
focus_neighbour_bottom = NodePath("../CreditsBtn")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Leaderboard"
flat = false
align = 0
_sections_unfolded = [ "Focus" ]

[node name="CreditsBtn" type="Button" parent="SubContent" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 330.0
margin_right = 324.0
margin_bottom = 420.0
rect_min_size = Vector2( 324, 90 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_top = NodePath("../LeaderboardBtn")
focus_neighbour_bottom = NodePath("../../ExitBtn")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Credits"
flat = false
align = 0
_sections_unfolded = [ "Focus", "custom_fonts" ]

[node name="ExitBtn" type="Button" parent="." index="5"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = -200.0
margin_right = 374.0
margin_bottom = -143.0
rect_min_size = Vector2( 324, 90 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_top = NodePath("../SubContent/CreditsBtn")
focus_neighbour_bottom = NodePath("../MapSelectBtn")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 7 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Exit"
flat = false
align = 0
_sections_unfolded = [ "Focus", "Margin", "custom_fonts", "custom_styles" ]

[node name="InputDeviceInfo" parent="." index="6" instance=ExtResource( 12 )]

anchor_left = 1.0
anchor_top = 1.0
margin_left = -274.0
margin_top = -280.0
margin_right = -24.0
margin_bottom = 0.0

[node name="TutorialPopUp" parent="." index="7" instance=ExtResource( 13 )]

visible = false
margin_left = -515.0
margin_top = -327.0
margin_right = 869.0
margin_bottom = 451.0
closeFocus = NodePath("../SubContent/HowToBtn")

[connection signal="pressed" from="MapSelectBtn" to="." method="onMapSelectBtnPressed"]

[connection signal="pressed" from="SubContent/HowToBtn" to="TutorialPopUp" method="onOpenBtnPressed"]

[connection signal="pressed" from="SubContent/OptionsBtn" to="." method="onOptionsBtnPressed"]

[connection signal="pressed" from="SubContent/LeaderboardBtn" to="." method="onLeaderboardBtnPressed"]

[connection signal="pressed" from="SubContent/CreditsBtn" to="." method="onCreditsBtnPressed"]

[connection signal="pressed" from="ExitBtn" to="." method="onExitBtnPressed"]


